tests/paczka1/fuzzy1/95415289.err
Error in line 12: S697 A483 270,0
Error in line 16: elcp2h7eN S697 10,7
Error in line 19: KVFMUaw Sm97 127,9
Error in line 18: elcp2h7eN A900 74,4
Error in line 25: KVFMUaw S697 84,5
Error in line 37: S697 A900 66,0
